--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.15.0",
+    "echarts": "^4.2.1",
     "style": "0.0.3",
+    "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-echarts": "^4.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
